# Genetic-toolbox

./: .gitignore  LICENSE  README.md  examples.ipynb  genetic_all.py  pyproject.toml
examples/: example.py
genetic_toolbox/: __init__.py  genetic_all.py
