[project]
name = "genetic-toolbox"
dynamic = ["version"]
description = "Genetic Algorithm Operators Library"
authors = [
    {name = "Filip Zúbek",email =  "filip.zubek@stuba.sk"}
]
license = {text = "MIT License"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy (>=2.2.3,<3.0.0)",
    "matplotlib (>=3.10.0,<4.0.0)"
]

[tool.poetry]
version = "0.0.0" # has no effect with dynamic versioning plugin

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry-dynamic-versioning]
enable = true
